--- a/css/slide.css
+++ b/css/slide.css
@@ -58,6 +58,7 @@
     z-index: 2;
 }
 
+
 .text--sub {
     font-size: 12px;
     letter-spacing: 0.5rem;
@@ -71,6 +72,14 @@
     font-weight: 700;
     line-height: 110px;
     margin-left: -8px;
+}
+.text--big-wt {
+    font-family: 'Poppins', sans-serif;
+    font-size: 4.5em;
+    font-weight: 700;
+    line-height: 110px;
+    margin-left: -8px;
+    color: white;
 }
 
 .text--normal {
@@ -127,11 +136,11 @@
 /* Piplup */
 
 .flex--piplup .flex__item--left {
-    background: #3e9fe6;
+    background: #f37021;
 }
 
 .flex--piplup .flex__item--right {
-    background: #d3eaef;
+    background: #ffffff;
 }
 
 /* Energisa On */
@@ -147,11 +156,11 @@
 /* Blaziken */
 
 .flex--blaziken .flex__item--left {
-    background: #f64f37;
+    background: #E9E9E9;
 }
 
 .flex--blaziken .flex__item--right {
-    background: #ffebcd;
+    background: #ffffff;
 }
 
 /* Dialga */
@@ -191,6 +200,8 @@
     transform: translate3d(0, 0, 0);
     transition: opacity 0.43s 0.6s, transform 0.4s 0.65s cubic-bezier(0, 0.88, 0.4, 0.93);
 }
+
+
 
 /* Animate-START point */
 
