--- a/css/slide.css
+++ b/css/slide.css
@@ -6,7 +6,7 @@
 
 .slider__navi {
     position: absolute;
-    top: 80%;
+    top: 70%;
     right: 20px;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
@@ -33,7 +33,7 @@
 
 .flex__container {
     position: absolute;
-    top: 1266px;
+    top: 90vh;
     left: 0;
     display: flex;
     display: -webkit-flex;
@@ -55,7 +55,7 @@
 }
 
 .flex__container.flex--active {
-    z-index: 2;
+    z-index: 3;
 }
 
 
@@ -75,7 +75,7 @@
 }
 .text--big-wt {
     font-family: 'Poppins', sans-serif;
-    font-size: 4.5em;
+    font-size: 3.5em;
     font-weight: 700;
     line-height: 110px;
     margin-left: -8px;
