--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,42 @@ main {
     position: static;
     text-align: start;
 }
+.alerta{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 1;
+}
+.sobre-text{
+    background-color: #FFB633;
+    width: 80%;
+    height: 65vh;
+    padding: 3%;
+    border-radius: 2%;
+    color: rgb(85, 76, 26);
+    font-size: 2mm;
+}
+img.sobre{
 
+    width: 250px;
+    display: block;
+    margin-top: 20%;
+    margin: auto;
+    margin-right: auto;
+    border-radius: 2%;
+    border-style: solid;
+    border-color: #FFB633;
+    border-width: 10px;
+    
+}
+.efeito{
+    
+    position: absolute;
+    width: 320mm;
+    left: 80px;
+    top: 0px;
+    z-index: -1;
+}
 /*Section 1*/
 
 #fp-nav ul li a span, #menu-line, .fp-slidesNav ul li a span {
@@ -58,6 +93,14 @@ main {
     left: 50px;
     position: absolute;
     z-index: -2;
+}
+
+.img-bg-logo2 {
+    width: 50%;
+    top: 0px;
+    left: 65px;
+    position: absolute;
+    z-index: -3;
 }
 
 .titulo {
