--- a/css/style.css
+++ b/css/style.css
@@ -1,353 +1,467 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap');
-html, body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@100&display=swap');
+
+html {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+body {
+    background: #EEEEEC url('../img/background.svg') no-repeat left bottom fixed !important;
+    background-size: 100%;
+    margin: 0px !important;
+}
+
+.container {
+    display: flex !important;
+    flex-flow: row wrap !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.section-one {
+    height: 100vh;
+    width: 100vw;
+    display: flex !important;
+    flex-flow: row wrap !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.apresentation {
     display: flex;
+    flex-shrink: 0;
     flex-direction: column;
-    font-size: 1rem;
-    background-color: #1F1F1F;
-}
-
-main {
-    flex: 1;
-}
-
-.navcolor{
-    background-color: #1F1F1F;
-}
-
-
-
-.section {
-    position: static;
-    text-align: start;
-}
-.alerta{
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: 1;
-}
-.sobre-text{
-    background-color: #FFB633;
-    width: 80%;
-    height: 65vh;
-    padding: 3%;
-    border-radius: 2%;
-    color: rgb(85, 76, 26);
-    font-size: 2mm;
-}
-img.sobre{
-
-    width: 250px;
-    display: block;
-    margin-top: 20%;
+    flex-shrink: 1;
     margin: auto;
-    margin-right: auto;
-    border-radius: 2%;
-    border-style: solid;
-    border-color: #FFB633;
-    border-width: 10px;
-    
-}
-.efeito{
-    
-    position: absolute;
-    width: 320mm;
-    left: 82px;
-    top: 0px;
-    z-index: -1;
-}
-/*Section 1*/
-
-#fp-nav ul li a span, #menu-line, .fp-slidesNav ul li a span {
-    background: #fff;
 }
 
-#fp-nav ul li a.active span, #fp-nav ul li:hover a.active span, .fp-slidesNav ul li a.active span, .fp-slidesNav ul li:hover a.active span {
-    height: 12px;
-    width: 12px;
-    margin: -6px 0 0 -6px;
-    border-radius: 100%;
-    border-color: #FFB633;
+.apresentation-Ola {
+    font-size: 36px;
+    font-weight: 500;
+    color: #212121;
+    font-style: normal;
+    font-family: 'Reenie Beanie', cursive;
 }
 
-.logo {
-    vertical-align: middle;
-    border-style: none;
-    margin-left: 30mm;
-
+.apresentation-eusou {
+    font-size: 70px;
+    margin: 1rem 0 2rem 0 !important;
+    color: #212121;
+    line-height: 65px;
+    font-style: normal;
+    font-weight: 600 !important;
+    font-family: 'Saira Condensed', sans-serif;
 }
 
-.perfil{
-    width: 40%;
-    top: -190px;
-    left: 700px;
-    position: absolute;
-    z-index: -2;
+.apresentation-about {
+    color: #000;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    display: flex;
+    width: 520px;
+    height: 55px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    margin: 1rem 0 3rem 0 !important;
 }
 
-.img-bg-logo {
-    width: 50%;
-    top: -450px;
-    left: 50px;
-    position: absolute;
-    z-index: -2;
-}
-
-.img-bg-logo2 {
-    width: 50%;
-    top: 0px;
-    left: 65px;
-    position: absolute;
-    z-index: -3;
-}
-
-.titulo {
-    font-weight: 300;
-    font-size: 8mm;
-    color: white;
-}
-
-.sub-titulo {
+.apresentation-buttom {
+    width: 148px;
+    height: 38px;
+    display: flex;
+    color: #FFF;
+    flex-shrink: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
     font-weight: 600;
-    font-size: 13mm;
-    color: #FFB633;
+    text-align: center;
+    transition: all 1s !important;
+    font-style: normal;
+    line-height: normal;
+    align-items: center;
+    border-radius: 15px;
+    text-decoration: none;
+    justify-content: center;
+    padding: 5px 5px 5px 24px;
+    background: var(--Primary, #9302FC);
+    box-shadow: 0px 6px 4px 0px rgba(200, 198, 198, 0.25);
 }
 
-.titulo-conteudo {
-    font-weight: 300;
-    font-size: 5mm;
-    color: #FFB633;
+.apresentation-buttom:hover {
+    color: #fff;
+    transition: all 1s !important;
+    transform: translateY(-10px) !important;
+    background: linear-gradient(45deg, #9302FC, #bc4dfc);
 }
 
-.conteudo {
-    font-weight: 300;
-    font-size: 5mm;
-    color: white;
+.apresentation-send {
+    padding: 8px 15px 5px 12px;
 }
 
-.btntwo {
-    font-weight: 300;
-    color: #FFB633;
+.photo {
+    display: flex;
+    width: 666px;
+    height: 566px;
+    flex-shrink: 1;
+    margin: auto;
 }
 
-.btn-info{
-    background-color: rgb(93, 93, 93);
+.photo-eu {
+    width: 100%;
+}
+
+.section-two {
+    height: 100vh;
+    width: 100vw;
+    display: flex !important;
+    flex-flow: row wrap !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.portfolio {
+    display: flex;
+    flex-shrink: 0;
+    flex-flow: row wrap;
+    flex-shrink: 1;
+    margin: auto;
+    align-items: center;
+}
+
+.portfolio-about {
+    color: #000;
+    font-family: 'Montserrat', sans-serif !important;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    display: flex;
+    width: 520px;
+    height: 55px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 1;
+    margin: 1rem 0 3rem 0 !important;
+}
+
+.design {
+    width: 100%;
+    flex-shrink: 1;
+    margin: auto;
+    margin: 1rem 0 3rem 0 !important;
+}
+ .mar1{
+    margin: 0 0 0 68px !important
+ }
+ .mar2{
+    margin: 0 0 0 68px !important
+ }
+
+ 
+
+footer {
+    color: #000;
+    font-family: 'Montserrat', sans-serif !important;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    background-color: rgb(209, 209, 209);
+    text-align: center;
+    margin: 24px 0 0 0;
+    padding: 15px 0 15px 0;
+    width: 100%;
+    bottom: 0;
+}
+
+.fade-in-left {
+    -webkit-animation: fade-in-left 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-left 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.fade-in-left2 {
+    -webkit-animation: fade-in-left2 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-left2 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.fade-in-left3 {
+    -webkit-animation: fade-in-left3 1.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-left3 1.8s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.fade-in-left4 {
+    -webkit-animation: fade-in-left4 2.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-left4 2.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 
-
-/*Animação do cursor*/
-
-.underline {
-    animation: animationFrames ease 1s;
-    animation-iteration-count: infinite;
-    transform-origin: 50% 50%;
-    animation-fill-mode: forwards;
-    /*when the spec is finished*/
-    -webkit-animation: animationFrames ease 1s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-transform-origin: 50% 50%;
-    -webkit-animation-fill-mode: forwards;
-    /*Chrome 16+, Safari 4+*/
-    -moz-animation: animationFrames ease 1s;
-    -moz-animation-iteration-count: infinite;
-    -moz-transform-origin: 50% 50%;
-    -moz-animation-fill-mode: forwards;
-    /*FF 5+*/
-    -o-animation: animationFrames ease 1s;
-    -o-animation-iteration-count: infinite;
-    -o-transform-origin: 50% 50%;
-    -o-animation-fill-mode: forwards;
-    /*Not implemented yet*/
-    -ms-animation: animationFrames ease 1s;
-    -ms-animation-iteration-count: infinite;
-    -ms-transform-origin: 50% 50%;
-    -ms-animation-fill-mode: forwards;
-    /*IE 10+*/
+.fade-in-top {
+    -webkit-animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
-@keyframes animationFrames {
+
+/**
+ * ----------------------------------------
+ * animation fade-in-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-in-top {
     0% {
+        -webkit-transform: translateY(-50px);
+        transform: translateY(-50px);
         opacity: 0;
-        transform: translate(0px, 100px);
     }
-    14% {
-        opacity: 1;
-        transform: translate(0px, 100px);
-    }
-    31% {
-        opacity: 0;
-        transform: translate(0px, 100px);
-    }
-    48% {
-        opacity: 0;
-        transform: translate(0px, 100px);
-    }
-    63% {
-        opacity: 1;
-        transform: translate(0px, 100px);
-    }
-    76% {
-        opacity: 0;
-        transform: translate(0px, 100px);
-    }
-    90% {
-        opacity: 1;
-        transform: translate(0px, 100px);
-    }
+
     100% {
-        opacity: 0;
-        transform: translate(0px, 100px);
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 
-@-moz-keyframes animationFrames {
+@keyframes fade-in-top {
     0% {
+        -webkit-transform: translateY(-50px);
+        transform: translateY(-50px);
         opacity: 0;
-        -moz-transform: translate(0px, 100px);
     }
-    14% {
-        opacity: 1;
-        -moz-transform: translate(0px, 100px);
-    }
-    31% {
-        opacity: 0;
-        -moz-transform: translate(0px, 100px);
-    }
-    48% {
-        opacity: 0;
-        -moz-transform: translate(0px, 100px);
-    }
-    63% {
-        opacity: 1;
-        -moz-transform: translate(0px, 100px);
-    }
-    76% {
-        opacity: 0;
-        -moz-transform: translate(0px, 100px);
-    }
-    90% {
-        opacity: 1;
-        -moz-transform: translate(0px, 100px);
-    }
+
     100% {
-        opacity: 0;
-        -moz-transform: translate(0px, 100px);
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
     }
 }
 
-@-webkit-keyframes animationFrames {
+
+
+/**
+ * ----------------------------------------
+ * animation fade-in-left
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-in-left {
     0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
         opacity: 0;
-        -webkit-transform: translate(0px, 100px);
     }
-    14% {
-        opacity: 1;
-        -webkit-transform: translate(0px, 100px);
-    }
-    31% {
-        opacity: 0;
-        -webkit-transform: translate(0px, 100px);
-    }
-    48% {
-        opacity: 0;
-        -webkit-transform: translate(0px, 100px);
-    }
-    63% {
-        opacity: 1;
-        -webkit-transform: translate(0px, 100px);
-    }
-    76% {
-        opacity: 0;
-        -webkit-transform: translate(0px, 100px);
-    }
-    90% {
-        opacity: 1;
-        -webkit-transform: translate(0px, 100px);
-    }
+
     100% {
-        opacity: 0;
-        -webkit-transform: translate(0px, 100px);
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
 }
 
-@-o-keyframes animationFrames {
+@keyframes fade-in-left {
     0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
         opacity: 0;
-        -o-transform: translate(0px, 100px);
     }
-    14% {
-        opacity: 1;
-        -o-transform: translate(0px, 100px);
-    }
-    31% {
-        opacity: 0;
-        -o-transform: translate(0px, 100px);
-    }
-    48% {
-        opacity: 0;
-        -o-transform: translate(0px, 100px);
-    }
-    63% {
-        opacity: 1;
-        -o-transform: translate(0px, 100px);
-    }
-    76% {
-        opacity: 0;
-        -o-transform: translate(0px, 100px);
-    }
-    90% {
-        opacity: 1;
-        -o-transform: translate(0px, 100px);
-    }
+
     100% {
-        opacity: 0;
-        -o-transform: translate(0px, 100px);
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
 }
 
-@-ms-keyframes animationFrames {
+
+/**
+ * ----------------------------------------
+ * animation fade-in-left2
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-in-left2 {
     0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
         opacity: 0;
-        -ms-transform: translate(0px, 100px);
     }
-    14% {
-        opacity: 1;
-        -ms-transform: translate(0px, 100px);
-    }
-    31% {
-        opacity: 0;
-        -ms-transform: translate(0px, 100px);
-    }
-    48% {
-        opacity: 0;
-        -ms-transform: translate(0px, 100px);
-    }
-    63% {
-        opacity: 1;
-        -ms-transform: translate(0px, 100px);
-    }
-    76% {
-        opacity: 0;
-        -ms-transform: translate(0px, 100px);
-    }
-    90% {
-        opacity: 1;
-        -ms-transform: translate(0px, 100px);
-    }
+
     100% {
-        opacity: 0;
-        -ms-transform: translate(0px, 100px);
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
     }
 }
 
+@keyframes fade-in-left2 {
+    0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
+        opacity: 0;
+    }
 
-/* section 2*/
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
 
-.linkedIn{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+/**
+ * ----------------------------------------
+ * animation fade-in-left3
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-in-left3 {
+    0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in-left3 {
+    0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/**
+ * ----------------------------------------
+ * animation fade-in-left3
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-in-left4 {
+    0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in-left4 {
+    0% {
+        -webkit-transform: translateX(-50px);
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@media only screen and (max-device-width: 700px) {
+    .apresentation-Ola {
+        margin: 16px 16px 0 16px !important;
+        font-size: 36px !important;
+        text-align: center;
+    }
+
+    .apresentation-eusou {
+        text-align: center;
+        font-size: 50px !important;
+        margin: 16px 16px 0 35px !important;
+    }
+
+    .apresentation-about {
+        font-size: 14px !important;
+        margin: 50px 16px 0 16px !important;
+        width: auto !important;
+        text-align: center;
+    }
+
+    .section-one {
+        height: 100vh;
+        width: 100vw;
+
+    }
+
+    .apresentation-buttom {
+        width: auto;
+        margin: 75px 16px 0 16px;
+    }
+
+    .apresentation-buttom:hover {
+        transition: all 1s !important;
+        transform: translateY(-10px) !important;
+    }
+
+    .photo {
+        width: 100%;
+        margin: 50px 16px 0 16px;
+        align-items: start;
+    }
+
+
+    .photo-eu {
+        width: 100%;
+    }
+
+    .section-two {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .portfolio {
+        margin: 16px;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: auto;
+        align-items: center;
+    }
+
+    .portfolio-about {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 0px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .design {
+        width: 100%;
+        margin: 25px 16px 0 16px;
+        align-items: start;
+        flex-shrink: 1;
+        margin: auto;
+    }
+    .mar1{
+        margin: 80px 0 0 0px !important;
+        font-size: 68px;
+     }
+
+     .mar2{
+        margin: 0px 0 0 0px !important;
+        font-size: 68px;
+     }
 }
