--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,34 @@ body {
     margin: 1rem 0 3rem 0 !important;
 }
 
+.section-tree {
+    display: flex !important;
+    height: 100vh;
+    width: 100vw;
+    flex-flow: row wrap !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+.amostra {
+    margin: 16px 0 0 ;
+    display: flex;
+    flex-shrink: 0;
+    flex-flow: row wrap;
+    flex-shrink: 1;
+    margin: auto;
+    align-items: center;
+}
+
+.amostra-title {
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 500;
+    font-size: 16px !important;
+    margin: 24px 16px 0 80px !important;
+    width: auto !important;
+    height: auto !important;
+    text-align: center;
+}
+
 .design {
     width: 100%;
     flex-shrink: 1;
@@ -166,19 +194,6 @@ body {
 
  
 
-footer {
-    color: #000;
-    font-family: 'Montserrat', sans-serif !important;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 600;
-    background-color: rgb(209, 209, 209);
-    text-align: center;
-    margin: 24px 0 0 0;
-    padding: 15px 0 15px 0;
-    width: 100%;
-    bottom: 0;
-}
 
 .fade-in-left {
     -webkit-animation: fade-in-left 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -448,6 +463,32 @@ footer {
         text-align: center;
     }
 
+    .section-tree {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .amostra {
+        margin: 16px 0 0 ;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: auto;
+        align-items: center;
+    }
+
+    .amostra-title {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 24px 16px 0 50px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
     .design {
         width: 100%;
         margin: 25px 16px 0 16px;
@@ -465,3 +506,4 @@ footer {
         font-size: 68px;
      }
 }
+
