--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ body {
     font-family: 'Montserrat', sans-serif !important;
     font-weight: 500;
     font-size: 16px !important;
-    margin: 24px 16px 0 80px !important;
+    margin: 24px 16px 0 80px ;
     width: auto !important;
     height: auto !important;
     text-align: center;
