--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
 }
 
 .container {
+    height: 100vh;
+    width: 100vw;
     display: flex !important;
     flex-flow: row wrap !important;
     align-items: center !important;
@@ -181,7 +183,6 @@ body {
 .design {
     width: 100%;
     flex-shrink: 1;
-    margin: auto;
     margin: 1rem 0 3rem 0 !important;
 }
  .mar1{
@@ -389,6 +390,122 @@ body {
     }
 }
 
+@media only screen and (max-device-width: 600px) {
+    .apresentation-Ola {
+        margin: 16px 16px 0 16px !important;
+        font-size: 36px !important;
+        text-align: center;
+    }
+
+    .apresentation-eusou {
+        text-align: center;
+        font-size: 50px !important;
+        margin: 16px 16px 0 35px !important;
+    }
+
+    .apresentation-about {
+        font-size: 14px !important;
+        margin: 50px 16px 0 16px !important;
+        width: auto !important;
+        text-align: center;
+    }
+
+    .section-one {
+        height: 100vh;
+        width: 100vw;
+
+    }
+
+    .apresentation-buttom {
+        width: auto;
+        margin: 75px 16px 0 16px;
+    }
+
+    .apresentation-buttom:hover {
+        transition: all 1s !important;
+        transform: translateY(-10px) !important;
+    }
+
+    .photo {
+        width: 100%;
+        margin: 24px 16px 0 16px !important;
+    
+    }
+
+
+    .photo-eu {
+        width: 100%;
+    }
+
+    .section-two {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .portfolio {
+        margin: 16px;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .portfolio-about {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 0px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .section-tree {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .amostra {
+        margin: 16px 0 0 ;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .amostra-title {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 24px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .design {
+        width: 100%;
+        margin: 25px 16px 0 16px;
+        align-items: start;
+        flex-shrink: 1;
+    }
+    .mar1{
+        margin: 80px 0 0 0px !important;
+        font-size: 68px;
+     }
+
+     .mar2{
+        margin: 0px 0 0 0px !important;
+        font-size: 68px;
+     }
+}
+
 @media only screen and (max-device-width: 700px) {
     .apresentation-Ola {
         margin: 16px 16px 0 16px !important;
@@ -505,3 +622,235 @@ body {
      }
 }
 
+@media only screen and (max-device-width: 800px) {
+    .apresentation-Ola {
+        margin: 16px 16px 0 16px !important;
+        font-size: 36px !important;
+        text-align: center;
+    }
+
+    .apresentation-eusou {
+        text-align: center;
+        font-size: 50px !important;
+        margin: 16px 16px 0 35px !important;
+    }
+
+    .apresentation-about {
+        font-size: 14px !important;
+        margin: 50px 16px 0 16px !important;
+        width: auto !important;
+        text-align: center;
+    }
+
+    .section-one {
+        height: 100vh;
+        width: 100vw;
+
+    }
+
+    .apresentation-buttom {
+        width: auto;
+        margin: 75px 16px 0 16px;
+    }
+
+    .apresentation-buttom:hover {
+        transition: all 1s !important;
+        transform: translateY(-10px) !important;
+    }
+
+    .photo {
+        width: 100%;
+        margin: 24px 16px 0 16px !important;
+    
+    }
+
+
+    .photo-eu {
+        width: 100%;
+    }
+
+    .section-two {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .portfolio {
+        margin: 16px;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .portfolio-about {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 0px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .section-tree {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .amostra {
+        margin: 16px 0 0 ;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .amostra-title {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 24px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .design {
+        width: 100%;
+        margin: 25px 16px 0 16px;
+        align-items: start;
+        flex-shrink: 1;
+    }
+    .mar1{
+        margin: 80px 0 0 0px !important;
+        font-size: 68px;
+     }
+
+     .mar2{
+        margin: 0px 0 0 0px !important;
+        font-size: 68px;
+     }
+}
+
+
+@media only screen and (max-device-width: 900px) {
+    .apresentation-Ola {
+        margin: 16px 16px 0 16px !important;
+        font-size: 36px !important;
+        text-align: center;
+    }
+
+    .apresentation-eusou {
+        text-align: center;
+        font-size: 50px !important;
+        margin: 16px 16px 0 35px !important;
+    }
+
+    .apresentation-about {
+        font-size: 14px !important;
+        margin: 50px 16px 0 16px !important;
+        width: auto !important;
+        text-align: center;
+    }
+
+    .section-one {
+        height: 100vh;
+        width: 100vw;
+
+    }
+
+    .apresentation-buttom {
+        width: auto;
+        margin: 75px 16px 0 16px;
+    }
+
+    .apresentation-buttom:hover {
+        transition: all 1s !important;
+        transform: translateY(-10px) !important;
+    }
+
+    .photo {
+        width: 100%;
+        margin: 24px 16px 0 16px !important;
+    
+    }
+
+
+    .photo-eu {
+        width: 100%;
+    }
+
+    .section-two {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .portfolio {
+        margin: 16px;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .portfolio-about {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 0px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .section-tree {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .amostra {
+        margin: 16px 0 0 ;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .amostra-title {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 24px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .design {
+        width: 100%;
+        margin: 25px 16px 0 16px;
+        align-items: start;
+        flex-shrink: 1;
+    }
+    .mar1{
+        margin: 80px 0 0 0px !important;
+        font-size: 68px;
+     }
+
+     .mar2{
+        margin: 0px 0 0 0px !important;
+        font-size: 68px;
+     }
+}
