--- a/css/style.css
+++ b/css/style.css
@@ -161,12 +161,11 @@ body {
     justify-content: center !important;
 }
 .amostra {
-    margin: 16px 0 0 ;
+    margin: 24px 0 0 0 ;
     display: flex;
     flex-shrink: 0;
     flex-flow: row wrap;
     flex-shrink: 1;
-    margin: auto;
     align-items: center;
 }
 
@@ -178,6 +177,15 @@ body {
     width: auto !important;
     height: auto !important;
     text-align: center;
+}
+.amostra-title1 {
+    font-size: 70px;
+    margin: 1rem 0 2rem 0 !important;
+    color: #212121;
+    line-height: 65px;
+    font-style: normal;
+    font-weight: 600 !important;
+    font-family: 'Saira Condensed', sans-serif;
 }
 
 .design {
@@ -390,6 +398,144 @@ body {
     }
 }
 
+@media only screen and (max-device-width: 375px) {
+    .apresentation-Ola {
+        margin: 16px 16px 0 16px !important;
+        font-size: 36px !important;
+        text-align: center;
+    }
+
+    .apresentation-eusou {
+        text-align: center;
+        font-size: 50px !important;
+        margin: 16px 16px 0 35px !important;
+    }
+
+    .apresentation-about {
+        font-size: 14px !important;
+        margin: 50px 16px 0 16px !important;
+        width: auto !important;
+        text-align: center;
+    }
+
+    .section-one {
+        height: 100vh;
+        width: 100vw;
+
+    }
+
+    .apresentation-buttom {
+        width: auto;
+        margin: 75px 16px 0 16px;
+    }
+
+    .apresentation-buttom:hover {
+        transition: all 1s !important;
+        transform: translateY(-10px) !important;
+    }
+
+    .photo {
+        width: 100%;
+        margin: 24px 16px 0 16px !important;
+    
+    }
+
+
+    .photo-eu {
+        width: 100%;
+    }
+
+    .section-two {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .portfolio {
+        margin: 16px;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        margin: 0px !important;
+        align-items: center;
+    }
+
+    .portfolio-about {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 0px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .section-tree {
+        height: 100vh;
+        width: 100vw;
+        align-items: flex-start !important;
+    }
+
+    .amostra {
+        margin: 192px 0 0 !important;
+        display: flex;
+        flex-shrink: 0;
+        flex-flow: row wrap;
+        flex-shrink: 1;
+        align-items: center;
+    }
+
+    .amostra-title1 {
+        font-size: 50px;
+        margin: 18rem 16px 2rem 16px !important;
+        color: #212121;
+        line-height: 65px;
+        font-style: normal;
+        font-weight: 600 !important;
+        text-align: center;
+        font-family: 'Saira Condensed', sans-serif;
+    }
+    
+
+    .amostra-title {
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500;
+        font-size: 16px !important;
+        margin: 24px 16px 0 16px !important;
+        width: auto !important;
+        height: auto !important;
+        text-align: center;
+    }
+
+    .amostra-title1 {
+        font-size: 70px;
+        margin: 1rem 0 2rem 0 !important;
+        color: #212121;
+        line-height: 65px;
+        font-style: normal;
+        font-weight: 600 !important;
+        font-family: 'Saira Condensed', sans-serif;
+    }
+    
+    .design {
+        width: 100%;
+        margin: 25px 16px 0 16px;
+        align-items: start;
+        flex-shrink: 1;
+    }
+    .mar1{
+        margin: 80px 0 0 0px !important;
+        font-size: 68px;
+     }
+
+     .mar2{
+        margin: 0px 0 0 0px !important;
+        font-size: 68px;
+     }
+}
+
+
 @media only screen and (max-device-width: 600px) {
     .apresentation-Ola {
         margin: 16px 16px 0 16px !important;
@@ -475,9 +621,20 @@ body {
         flex-shrink: 0;
         flex-flow: row wrap;
         flex-shrink: 1;
-        margin: 0px !important;
         align-items: center;
     }
+
+    .amostra-title1 {
+        font-size: 50px;
+        margin: 18rem 16px 2rem 16px !important;
+        color: #212121;
+        line-height: 65px;
+        font-style: normal;
+        font-weight: 600 !important;
+        text-align: center;
+        font-family: 'Saira Condensed', sans-serif;
+    }
+    
 
     .amostra-title {
         font-family: 'Montserrat', sans-serif !important;
@@ -591,9 +748,20 @@ body {
         flex-shrink: 0;
         flex-flow: row wrap;
         flex-shrink: 1;
-        margin: 0px !important;
         align-items: center;
     }
+
+    .amostra-title1 {
+        font-size: 50px;
+        margin: 18rem 16px 2rem 16px !important;
+        color: #212121;
+        line-height: 65px;
+        font-style: normal;
+        font-weight: 600 !important;
+        text-align: center;
+        font-family: 'Saira Condensed', sans-serif;
+    }
+    
 
     .amostra-title {
         font-family: 'Montserrat', sans-serif !important;
@@ -707,9 +875,20 @@ body {
         flex-shrink: 0;
         flex-flow: row wrap;
         flex-shrink: 1;
-        margin: 0px !important;
         align-items: center;
     }
+
+    .amostra-title1 {
+        font-size: 50px;
+        margin: 18rem 16px 2rem 16px !important;
+        color: #212121;
+        line-height: 65px;
+        font-style: normal;
+        font-weight: 600 !important;
+        text-align: center;
+        font-family: 'Saira Condensed', sans-serif;
+    }
+    
 
     .amostra-title {
         font-family: 'Montserrat', sans-serif !important;
@@ -824,9 +1003,20 @@ body {
         flex-shrink: 0;
         flex-flow: row wrap;
         flex-shrink: 1;
-        margin: 0px !important;
         align-items: center;
     }
+
+    .amostra-title1 {
+        font-size: 50px;
+        margin: 5rem 16px 2rem 16px !important;
+        color: #212121;
+        line-height: 65px;
+        font-style: normal;
+        font-weight: 600 !important;
+        text-align: center;
+        font-family: 'Saira Condensed', sans-serif;
+    }
+    
 
     .amostra-title {
         font-family: 'Montserrat', sans-serif !important;
