--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     margin: auto;
 }
 
-.apresentation-Ola {
+.apresentation-title1 {
     font-size: 36px;
     font-weight: 500;
     color: var (--text-color);
@@ -57,7 +57,7 @@ body {
     font-family: 'Reenie Beanie', cursive;
 }
 
-.apresentation-eusou {
+.apresentation-title2 {
     font-size: 70px;
     margin: 1rem 0 2rem 0 !important;
     color: var (--text-color);
@@ -67,7 +67,7 @@ body {
     font-family: 'Saira Condensed', sans-serif;
 }
 
-.apresentation-about {
+.apresentation-intro {
     color: var (--text-color);
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
@@ -142,7 +142,7 @@ body {
     align-items: center;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin: 24px 16px 16px 16px !important;
+    margin: 24px 16px 16px 16px;
 }
 
 .portfolio-about {
@@ -202,12 +202,4 @@ body {
     width: 100%;
     flex-shrink: 1;
     margin: 1rem 0 3rem 0 !important;
-}
-
-.mar1 {
-    margin: 0 0 0 68px !important;
-}
-
-.mar2 {
-    margin: 0 0 0 68px !important;
 }
