--- a/css/style.css
+++ b/css/style.css
@@ -49,26 +49,26 @@ body {
     margin: auto;
 }
 
-.apresentation-title1 {
+.apresentation-Ola {
     font-size: 36px;
     font-weight: 500;
-    color: var (--text-color);
+    color: var(--text-color);
     font-style: normal;
     font-family: 'Reenie Beanie', cursive;
 }
 
-.apresentation-title2 {
+.apresentation-eusou {
     font-size: 70px;
     margin: 1rem 0 2rem 0 !important;
-    color: var (--text-color);
+    color: var(--text-color);
     line-height: 65px;
     font-style: normal;
     font-weight: 600 !important;
     font-family: 'Saira Condensed', sans-serif;
 }
 
-.apresentation-intro {
-    color: var (--text-color);
+.apresentation-about {
+    color: var(--text-color);
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     font-style: normal;
@@ -142,7 +142,7 @@ body {
     align-items: center;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin: 24px 16px 16px 16px;
+    margin: 24px 16px 16px 16px !important;
 }
 
 .portfolio-about {
@@ -202,4 +202,12 @@ body {
     width: 100%;
     flex-shrink: 1;
     margin: 1rem 0 3rem 0 !important;
+}
+
+.mar1 {
+    margin: 0 0 0 68px !important;
+}
+
+.mar2 {
+    margin: 0 0 0 68px !important;
 }
