--- a/css/list-of-media-queries.css
+++ b/css/list-of-media-queries.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@100&display=swap');
 
-@media only screen and (max-device-width: 375px) {
+@media only screen and  (min-device-width: 300px) and  (max-device-width: 1027px) {
     .apresentation-Ola {
         margin: 16px 16px 0 16px !important;
         font-size: 36px !important;
@@ -113,7 +113,7 @@
     }
 
     .amostra-title1 {
-        font-size: 70px !important;
+        font-size: 50px !important;
         margin: 1rem 0 2rem 0 !important;
         color: #212121 !important;
         line-height: 65px !important;
@@ -139,6 +139,7 @@
         font-size: 68px !important;
     }
 }
+/**
 @media only screen and (max-device-width: 600px) {
     .apresentation-Ola {
         margin: 16px 16px 0 16px !important;
@@ -647,4 +648,4 @@
         margin: 0px 0 0 0px !important;
         font-size: 68px !important;
     }
-}
+}**/
