--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ body {
 .container {
     width: 98vw;
     display: flex !important;
-    flex-flow: row wrap !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
     align-items: center !important;
     justify-content: space-between !important;
     
@@ -33,9 +34,9 @@ body {
 
 .section-one {
     width: 98vw;
-    height: 100vh;
     display: flex !important;
-    flex-flow: row wrap !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
     align-items: center !important;
     justify-content: center !important;
     background: url('../img/background.svg') no-repeat left bottom fixed !important;
@@ -43,9 +44,7 @@ body {
 
 .apresentation {
     display: flex;
-    flex-shrink: 0;
     flex-direction: column;
-    flex-shrink: 1;
     margin: auto;
 }
 
@@ -79,8 +78,7 @@ body {
     height: 55px;
     flex-direction: column;
     justify-content: center;
-    flex-shrink: 0;
-    margin: 1rem 0 3rem 0 !important;
+    margin: 24px 16px 58px 0px;
 }
 
 .apresentation-buttom {
@@ -88,7 +86,6 @@ body {
     height: 38px;
     display: flex;
     color: var(--color-white);
-    flex-shrink: 0;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 600;
@@ -130,17 +127,15 @@ body {
 .section-two {
     width: 98vw;
     display: flex !important;
-    flex-flow: row wrap !important;
     align-items: center !important;
-    justify-content: center !important;
 }
 
 .portfolio {
     width: 100%;
     display: flex;
-    flex-shrink: 1;
     align-items: center;
-    flex-flow: row wrap;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
     justify-content: space-around;
     margin: 24px 16px 16px 16px !important;
 }
@@ -148,15 +143,9 @@ body {
 .portfolio-about {
     width: 520px;
     height: 55px;
-    display: flex;
     color: var(--text-color);
-    flex-shrink: 1;
     font-size: 15px;
     font-weight: 800;
-    font-style: normal;
-    line-height: normal;
-    flex-direction: column;
-    justify-content: center;
     margin: 1rem 0 3rem 0 !important;
     font-family: 'Montserrat', sans-serif !important;
 }
@@ -164,18 +153,13 @@ body {
 .section-tree {
     width: 98vw;
     display: flex !important;
-    flex-flow: row wrap !important;
     align-items: center !important;
-    justify-content: center !important;
 }
 
 .amostra {
     display: flex;
-    flex-shrink: 0;
-    flex-shrink: 1;
     margin: 24px 0 0 0;
-    align-items: center;
-    flex-flow: row wrap;
+    flex-direction: column;
 }
 
 .amostra-title {
@@ -199,6 +183,5 @@ body {
 
 .design {
     width: 100%;
-    flex-shrink: 1;
     margin: 1rem 0 3rem 0 !important;
 }
