--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@100&display=swap');
-@import url('list-of-media-queries.css') (min-device-width: 300px)  and  (max-device-width: 900px);
+@import url('https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap');
+@import url('list-of-media-queries.css') (min-device-width: 300px) and (max-device-width: 900px);
+
 :root {
     --backgroud-color: #EEEEEC;
     --text-color: #212121;
@@ -29,7 +31,7 @@ body {
     flex-wrap: wrap !important;
     align-items: center !important;
     justify-content: space-between !important;
-    
+
 }
 
 .section-one {
@@ -38,14 +40,14 @@ body {
     flex-direction: row !important;
     flex-wrap: wrap !important;
     align-items: center !important;
-    justify-content: center !important;
+    justify-content:  space-evenly ;
     background: url('../img/background.svg') no-repeat left bottom fixed !important;
+    
 }
 
 .apresentation {
     display: flex;
     flex-direction: column;
-    margin: auto;
 }
 
 .apresentation-Ola {
@@ -74,7 +76,7 @@ body {
     font-weight: 800;
     line-height: normal;
     display: flex;
-    width: 520px;
+    width: 400px;
     height: 55px;
     flex-direction: column;
     justify-content: center;
@@ -85,12 +87,9 @@ body {
     width: 148px;
     height: 38px;
     display: flex;
-    color: var(--color-white);
-    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    transition: all 1s !important;
     font-style: normal;
     line-height: normal;
     align-items: center;
@@ -98,7 +97,10 @@ body {
     text-decoration: none;
     justify-content: center;
     padding: 5px 5px 5px 24px;
+    color: var(--color-white);
+    transition: all 1s !important;
     background: var(--primary-color);
+    font-family: 'Poppins', sans-serif;
     box-shadow: 0px 6px 4px 0px rgba(200, 198, 198, 0.25);
 }
 
@@ -113,14 +115,194 @@ body {
     padding: 8px 15px 5px 12px;
 }
 
-.photo {
+.cardHero {
     display: flex;
-    width: 666px;
     flex-shrink: 1;
-    margin: auto;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
-.photo-eu {
+.container-grid {
+    gap: 0px;
+    width: 50vw;
+    height: 500px;
+    display: grid;
+    background-size: contain;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-position: center !important;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    background: url('../img/eu.svg') no-repeat;
+
+}
+
+#item-0 {
+
+    grid-row-end: 6;
+    grid-row-start: 1;
+    grid-column-end: 4;
+    grid-column-start: 2;
+
+}
+
+#item-1 {
+
+    grid-row-end: 6;
+    grid-row-start: 5;
+    grid-column-end: 5;
+    grid-column-start: 4;
+    margin-left: 68px;
+
+}
+
+#item-2 {
+
+    grid-row-end: 5;
+    grid-row-start: 4;
+    grid-column-end: 5;
+    grid-column-start: 4;
+    margin-left: 124px;
+
+}
+
+#item-3 {
+
+    grid-row-end: 6;
+    grid-row-start: 5;
+    grid-column-end: 2;
+    grid-column-start: 1;
+    margin-left: 68px;
+
+}
+
+#item-4 {
+
+    grid-row-end: 5;
+    grid-row-start: 4;
+    grid-column-end: 2;
+    grid-column-start: 1;
+    margin-left: 24px;
+
+}
+
+
+#item-5 {
+
+    grid-row-end: 2;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-column-start: 1;
+    justify-self: end;
+    margin-left: 68px;
+
+}
+
+#item-6 {
+
+    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-column-end: 2;
+    grid-column-start: 1;
+    margin-left: 24px;
+
+}
+
+#item-7 {
+
+    grid-row-end: 4;
+    grid-row-start: 3;
+    grid-column-end: 2;
+    grid-column-start: 1;
+    margin-left: -24px;
+
+}
+
+#item-8 {
+
+    grid-row-end: 4;
+    grid-row-start: 3;
+    grid-column-end: 5;
+    grid-column-start: 4;
+    margin-left: 158px;
+
+}
+
+#item-9 {
+
+    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-column-end: 5;
+    grid-column-start: 4;
+    margin-left: 124px;
+
+}
+
+#item-10 {
+
+    grid-row-end: 2;
+    grid-row-start: 1;
+    grid-column-end: 5;
+    grid-column-start: 4;
+    margin-left: 68px;
+
+}
+
+
+.container-uxid {
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.cardHero-uxid {
+    gap: 12px;
+    z-index: 2;
+    width: 180px;
+    height: 38px;
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    border-radius: 21px;
+    padding: 16px 28px 16px 16px;
+    margin: 16px 16px 16px 0;
+    transition: all 1s !important;
+    background: var(--color-white);
+    box-shadow: 0px 9px 15.6px 0px rgba(0, 0, 0, 0.15);
+    font-size: 14px;
+    font-style: normal;
+    line-height: normal;
+    color: var(--text-color);
+    font-weight: 600 !important;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.cardHero-uxid:hover {
+    color: var(--color-white) !important;
+    transition: all 0.3s !important;
+    transform: translateY(-10px) !important;
+    background: linear-gradient(45deg, #9302FC, #bc4dfc) !important;
+}
+
+
+.cardHero-shapeUX {
+    display: flex;
+    background: #FFF;
+    align-items: center;
+    border-radius: 100px;
+    justify-content: center;
+    padding: 6px 6px 6px 5px;
+    box-shadow: 6px 9px 31px 0px rgba(0, 0, 0, 0.15);
+}
+
+.cardHero-textShape {
+    font-size: 16px;
+    font-weight: 500;
+    font-style: normal;
+    line-height: normal;
+    color: var(--primary-color);
+    font-family: 'Krub', sans-serif;
+}
+
+.cardHero-photo {
     width: 100%;
 }
 
