--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap');
-@import url('list-of-media-queries.css') (min-device-width: 300px) and (max-device-width: 900px), (min-device-width: 337px) and  (max-device-height: 667px);
+@import url('list-of-media-queries.css') (min-device-width: 300px) and (max-device-width: 900px), (min-device-width: 337px) and (max-device-height: 667px);
 
 :root {
     --backgroud-color: #EEEEEC;
@@ -26,6 +26,7 @@ body {
 
 .container {
     width: 98vw;
+    height: 100hw;
     display: flex !important;
     flex-direction: row !important;
     flex-wrap: wrap !important;
@@ -34,15 +35,16 @@ body {
 
 }
 
-.section-one {
+.one {
     width: 98vw;
+    height: 100vh;
     display: flex !important;
     flex-direction: row !important;
     flex-wrap: wrap !important;
     align-items: center !important;
-    justify-content:  space-evenly ;
+    justify-content: space-evenly;
     background: url('../img/background.svg') no-repeat left bottom fixed !important;
-    
+
 }
 
 .apresentation {
@@ -111,7 +113,7 @@ body {
     background: linear-gradient(45deg, --primary-color, --secondary-color);
 }
 
-.apresentation-send {
+.icon {
     padding: 8px 15px 5px 12px;
 }
 
@@ -122,221 +124,205 @@ body {
     flex-direction: row;
 }
 
-.container-grid {
-    gap: 0px;
-    width: 50vw;
-    height: 500px;
-    display: grid;
-    background-size: contain;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    background-position: center !important;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    background: url('../img/eu.svg') no-repeat;
-
-}
-
-#item-0 {
-
-    grid-row-end: 6;
-    grid-row-start: 1;
-    grid-column-end: 4;
-    grid-column-start: 2;
-
-}
-
-#item-1 {
-
-    grid-row-end: 6;
-    grid-row-start: 5;
-    grid-column-end: 5;
-    grid-column-start: 4;
-    margin-left: 68px;
-
-}
-
-#item-2 {
-
-    grid-row-end: 5;
-    grid-row-start: 4;
-    grid-column-end: 5;
-    grid-column-start: 4;
-    margin-left: 124px;
-
-}
-
-#item-3 {
-
-    grid-row-end: 6;
-    grid-row-start: 5;
-    grid-column-end: 2;
-    grid-column-start: 1;
-    margin-left: 68px;
-
-}
-
-#item-4 {
-
-    grid-row-end: 5;
-    grid-row-start: 4;
-    grid-column-end: 2;
-    grid-column-start: 1;
-    margin-left: 24px;
-
-}
-
-
-#item-5 {
-
-    grid-row-end: 2;
-    grid-row-start: 1;
-    grid-column-end: 2;
-    grid-column-start: 1;
-    justify-self: end;
-    margin-left: 68px;
-
-}
-
-#item-6 {
-
-    grid-row-end: 3;
-    grid-row-start: 2;
-    grid-column-end: 2;
-    grid-column-start: 1;
-    margin-left: 24px;
-
-}
-
-#item-7 {
-
-    grid-row-end: 4;
-    grid-row-start: 3;
-    grid-column-end: 2;
-    grid-column-start: 1;
-    margin-left: -24px;
-
-}
-
-#item-8 {
-
-    grid-row-end: 4;
-    grid-row-start: 3;
-    grid-column-end: 5;
-    grid-column-start: 4;
-    margin-left: 158px;
-
-}
-
-#item-9 {
-
-    grid-row-end: 3;
-    grid-row-start: 2;
-    grid-column-end: 5;
-    grid-column-start: 4;
-    margin-left: 124px;
-
-}
-
-#item-10 {
-
-    grid-row-end: 2;
-    grid-row-start: 1;
-    grid-column-end: 5;
-    grid-column-start: 4;
-    margin-left: 68px;
-
-}
-
-
-.container-uxid {
-    z-index: 1;
+.container-photo {
     display: flex;
-    flex-direction: column;
+    align-items: center !important;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.cardHero-uxid {
-    gap: 12px;
-    z-index: 2;
-    width: 180px;
-    height: 38px;
-    display: flex;
-    flex-shrink: 0;
-    align-items: center;
-    border-radius: 21px;
-    padding: 16px 28px 16px 16px;
-    margin: 16px 16px 16px 0;
-    transition: all 1s !important;
-    background: var(--color-white);
-    box-shadow: 0px 9px 15.6px 0px rgba(0, 0, 0, 0.15);
-    font-size: 14px;
-    font-style: normal;
-    line-height: normal;
-    color: var(--text-color);
-    font-weight: 600 !important;
-    font-family: 'Open Sans', sans-serif;
+.photo {
+    width: 80%;
 }
 
-.cardHero-uxid:hover {
-    color: var(--color-white) !important;
-    transition: all 0.3s !important;
-    transform: translateY(-10px) !important;
-    background: linear-gradient(45deg, #9302FC, #bc4dfc) !important;
-}
-
-
-.cardHero-shapeUX {
-    display: flex;
-    background: #FFF;
-    align-items: center;
-    border-radius: 100px;
-    justify-content: center;
-    padding: 6px 6px 6px 5px;
-    box-shadow: 6px 9px 31px 0px rgba(0, 0, 0, 0.15);
-}
-
-.cardHero-textShape {
-    font-size: 16px;
-    font-weight: 500;
-    font-style: normal;
-    line-height: normal;
-    color: var(--primary-color);
-    font-family: 'Krub', sans-serif;
-}
-
-.cardHero-photo {
-    width: 100%;
-}
-
-.section-two {
+.two {
     width: 98vw;
     display: flex !important;
-    align-items: center !important;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start !important;
+    justify-content: space-evenly;
 }
 
-.portfolio {
-    width: 100%;
+.two-container1 {
     display: flex;
-    align-items: center;
-    flex-direction: row !important;
-    flex-wrap: wrap !important;
-    justify-content: space-around;
+    align-items: flex-start;
+    flex-direction: column !important;
     margin: 24px 16px 16px 16px !important;
 }
 
-.portfolio-about {
-    width: 520px;
-    height: 55px;
-    color: var(--text-color);
-    font-size: 15px;
-    font-weight: 800;
-    margin: 1rem 0 3rem 0 !important;
-    font-family: 'Montserrat', sans-serif !important;
+.two-container2 {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column !important;
+    margin: 24px 16px 16px 16px !important;
 }
 
-.section-tree {
+.two-title {
+    font-size: 70px;
+    margin: 1rem 0 2rem 0 !important;
+    color: var(--text-color);
+    line-height: 65px;
+    font-style: normal;
+    font-weight: 600 !important;
+    font-family: 'Saira Condensed', sans-serif;
+}
+
+.two-subTitle {
+    color: var(--text-color);
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    display: flex;
+    width: 500px;
+    height: 55px;
+    flex-direction: column;
+    justify-content: center;
+    margin: 24px 16px 58px 0px;
+}
+
+.two-buttom {
+    width: 160px;
+    height: 38px;
+    margin-bottom: 48px;
+    display: flex;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    font-style: normal;
+    line-height: normal;
+    align-items: center;
+    border-radius: 15px;
+    text-decoration: none;
+    justify-content: center;
+    padding: 5px 5px 5px 24px;
+    color: var(--color-white);
+    transition: all 1s !important;
+    background: var(--primary-color);
+    font-family: 'Poppins', sans-serif;
+    box-shadow: 0px 6px 4px 0px rgba(200, 198, 198, 0.25);
+}
+
+.two-buttom:hover {
+    color: var(--color-white);
+    transition: all 1s !important;
+    transform: translateY(-10px) !important;
+    background: linear-gradient(45deg, --primary-color, --secondary-color);
+}
+
+.exper {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column !important;
+}
+
+
+a {
+    text-decoration: none;
+}
+.exper-titleAcad {
+    color: var(--primary-color);
+    font-family: 'Saira Condensed', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 550;
+    line-height: normal;
+}
+
+.exper-title {
+    font-size: 36px;
+    margin: 1rem 0 2rem 0 !important;
+    color: var(--text-color);
+    line-height: 65px;
+    font-style: normal;
+    font-weight: 600 !important;
+    font-family: 'Saira Condensed', sans-serif;
+}
+
+.exper-card {
+    gap: 24px;
+    width: 450px;
+    height: 67px;
+    display: flex;
+    margin-bottom: 24px;
+    align-items: center;
+    border-radius: 21px;
+    padding: 0 16px 0 16px;
+    flex-direction: row !important;
+    background: var(--color-white);
+    box-shadow: 0px 9px 15.6px 0px rgba(0, 0, 0, 0.15);
+    transition: all 1s !important;
+}
+
+.exper-card:hover{
+    transition: all 1s !important;
+    transform: translateY(-10px) !important;
+}
+.exper-contIcon {
+    display: flex;
+    width: 34px;
+    height: 34px;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 100px;
+    background: #9302FC;
+}
+
+.exper-icon {
+    border-radius: 100px;
+    background: #9302FC;
+}
+
+.exper-emp {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.exper-empName {
+    color: var(--text-color);
+    font-family: 'Open San', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.exper-emptext {
+    color: var(--text-color);
+    font-family: 'Open San', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.exper-cargo {
+    display: flex;
+    width: 35%;
+    text-align: end;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: var(--text-color);
+    font-family: 'Open San', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.tree {
     width: 98vw;
     display: flex !important;
     align-items: center !important;
 }
+
 
 .amostra {
     display: flex;
