--- a/css/list-of-media-queries.css
+++ b/css/list-of-media-queries.css
@@ -38,7 +38,7 @@
         align-items: center !important;
     }
 
-    .photo{
+    .photo {
         width: 90% !important;
     }
 
@@ -46,7 +46,7 @@
         margin-top: 48px;
     }
 
-    .linkedin{
+    .linkedin {
         width: 150px !important;
     }
 
@@ -83,6 +83,82 @@
         gap: 16px !important;
         width: 300px !important;
         height: 100px !important;
+    }
+
+
+    .three-title {
+        font-size: 50px !important;
+        margin: 1rem 0 2rem 1rem !important;
+        text-align: center !important;
+    }
+
+    .three-projetos {
+        gap: 30px !important;
+        flex-wrap: wrap !important;
+    }
+
+    .projetos-title {
+
+        font-size: 24px !important;
+        text-align: center !important;
+
+    }
+
+    .projetos-SubTitle {
+        font-size: 32px !important;
+        text-align: center !important;
+    }
+
+    .projetos-text {
+        margin-top: 24px !important;
+        padding: 0% 24% 0 24% !important;
+        font-size: 14px !important;
+        text-align: center !important;
+        background-color: var(--backgroud-color) !important;
+    }
+
+    .projetos-img {
+        width: 100% !important;
+
+    }
+
+    .reverse {
+        flex-direction: row-reverse !important;
+    }
+
+    .hide {
+        display: none;
+    }
+
+    .show {
+        visibility: visible;
+    }
+
+    .none {
+
+        display: flex !important;
+    }
+    .four {
+        justify-content: center !important;
+    }
+
+    .four-container1 {
+        align-items: center !important;
+    }
+    .four-title {
+        font-size: 50px !important;
+        text-align: center !important;
+    }
+
+    .four-subTitle {
+        font-size: 14px !important;
+        width: 300px !important;
+        text-align: center !important;
+    }
+
+    .four-container2 {
+        padding: 16% !important;
+       
     }
 
 }
