--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Krub:wght@200;300;400;500;600;700&family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;800&family=Poppins:wght@100;200;300;400;500;600;700;800&family=Reenie+Beanie&family=Saira+Condensed:wght@100;200;400;500;600;700;800&display=swap');
 @import url('list-of-media-queries.css') (max-width: 1024px);
-
+html {
+    scroll-behavior: smooth;
+  }
 :root {
     --backgroud-color: #EEEEEC;
     --two-color: E5E5E5;
     --text-color: #212121;
     --color-white: white;
-    --primary-color: #9302FC;
+    --primary-color: #000;
     --secondary-color: #bc4dfc;
     --footer-color: #0F8BFA;
     --footer-color2: #FFB800;
@@ -24,6 +26,7 @@
 
 
 body {
+    
     background: var(--backgroud-color);
 }
 
@@ -58,7 +61,7 @@ a {
     padding: 48px;
     display: flex !important;
     flex-direction: row !important;
-    flex-wrap: wrap !important;
+    /*flex-wrap: wrap !important;*/
     background: url('../img/background.svg') no-repeat left bottom fixed !important;
 
 }
@@ -153,6 +156,7 @@ a {
     transform: translateY(-10px) !important;
     background: linear-gradient(45deg, --primary-color, --secondary-color);
 }
+
 .buttom_Portf:hover {
     color: var(--color-white);
     transition: all 1s !important;
@@ -164,6 +168,7 @@ a {
     padding: 8px 15px 5px 12px;
 }
 
+/*
 .container-linkedin {
     display: flex;
     flex-direction: column;
@@ -172,7 +177,7 @@ a {
     align-items: center;
     justify-content: flex-end;
 }
-
+*/
 
 .container-photo {
     display: flex;
@@ -187,8 +192,9 @@ a {
     display: flex !important;
     flex-direction: row !important;
     flex-wrap: wrap !important;
-    background-color: var(--two-color) !important;
-    background: url('../img/two.svg') no-repeat left bottom fixed !important;
+    background: url('../img/two.svg') no-repeat left bottom fixed #E5E5E5 !important;
+
+
 }
 
 .two-container1 {
@@ -290,12 +296,12 @@ a {
     align-items: center;
     flex-shrink: 0;
     border-radius: 100px;
-    background: #9302FC;
+    background: #000000;
 }
 
 .exper-icon {
     border-radius: 100px;
-    background: #9302FC;
+    background: #000;
 }
 
 .exper-emp {
@@ -332,7 +338,7 @@ a {
 
 .three-title {
     font-size: 64px;
-    margin: 1rem 0 2rem 5rem ;
+    margin: 1rem 0 2rem 5rem;
     color: var(--text-color);
     line-height: 65px;
     font-style: normal;
@@ -340,7 +346,7 @@ a {
     font-family: 'Saira Condensed', sans-serif;
 }
 
-.figma{
+.figma {
     margin-left: 24px;
 }
 
@@ -363,7 +369,8 @@ a {
     font-weight: 600;
     line-height: normal;
 }
-.none{
+
+.none {
 
     display: none;
 }
@@ -476,4 +483,211 @@ a {
     font-style: normal;
     font-weight: 600 !important;
     font-family: 'Saira Condensed', sans-serif;
+}
+
+
+
+
+
+
+li{
+list-style:none;
+}
+.title{
+font-weight:bold;
+cursor:default;
+}
+
+.topnav {
+  overflow: hidden;
+  font-family: 'Oswald', sans-serif;
+  position: -webkit-sticky; /* Necessário para funcionar no Safari */
+  position: sticky;
+  top: 0;
+  z-index: 5;
+  background-color: var(--backgroud-color) !important;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  margin:0 1%;
+  text-decoration: none;
+  font-size: 17px;
+  transition:0.5s;
+}
+
+.active {
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  margin:0 1%;
+  transition:0.5s;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  transition:0.5s;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content ul{
+width:13%;
+display:inline-block;
+vertical-align: top;
+}
+
+.dropdown-content li{
+padding:4px 10px;
+}
+
+.dropdown-content li a{
+padding:0px;
+font-size:14px;
+transition:0.5s;
+}
+
+.dropdown-content li a:hover{
+background:none;
+color:#2874f0;
+}
+
+.mega-menu{
+background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url("https://i.ibb.co/Ydng63L/001.jpg");
+background-repeat:no-repeat;
+background-size:50% 100%;
+background-position:bottom right;
+background-color:#fff;
+position:absolute;
+left:0;
+min-width:100%;
+}
+
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  color:#2874f0;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media (max-width:900px){
+ .dropdown-content ul{
+width:25%;
+display:inline-block;
+}
+}
+
+@media (max-width:800px){
+ .dropdown-content ul{
+width:40%;
+display:inline-block;
+}
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .dropdown-content ul{
+width:90%;
+display:block;
+}
+.dropdown-content li:not(:first-child){
+display:none;
+transition:0.5s;
+}
+
+.dropdown-content ul:hover > li{
+display:block;
+}
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
 }
